test/integration/bad/lang/incomplete.stan
transformed data {
  real x = 2.0 .^ ;
}